# finance-assistant

./: .claudeignore  .gitignore  CLAUDE.original.md  README.md  check_db.py  claude.md  claude_phase_1.md  claude_phase_2.md  eval.py  import_corrections.py  main.py  pyproject.toml  reconcile.py  report.py  requirements.txt  review.py  splitwise.py
cli/: import_corrections.py  main.py  reconcile.py  recurring.py  report.py  review.py  splitwise.py
config/: budget.yaml  categories.yaml  contact_aliases.yaml  description_patterns.yaml  settings.yaml
core/: analytics.py  categorizer.py  contact_matcher.py  corrections_db.py  corrections_merge.py  dateparse.py  db.py  deduplicator.py  description_cleaner.py  reconciler.py  settings.py
parsers/: base.py  detector.py  validator.py
scripts/: check_db.py  clear_db.py  eval.py  recategorize.py
tests/: conftest.py  test_analytics.py
